<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.newcardano.clinica.ui.dashboard.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_appointment"
        android:name="com.newcardano.clinica.ui.dashboard.appointment.AppointmentFragment"
        android:label="@string/title_appointment"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.newcardano.clinica.ui.dashboard.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>