<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHomeBG"
    tools:context=".ui.search.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.antique.events.ui.utils.components.UBEditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gen_search"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:drawableRight="@drawable/ic_baseline_search_24"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_search"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/xxl_padding"
        android:layout_marginTop="@dimen/xxxl_padding"
        android:layout_marginRight="@dimen/xxl_padding"
        android:background="@drawable/cla_tab_background"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/cla_tabl_selector"
        app:tabIndicatorHeight="0dp"
        app:tabPaddingEnd="-1dp"
        app:tabPaddingStart="-1dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/UBTabAppearance.Medium"
        app:tabTextColor="@color/colorAccent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_tab" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="?actionBarSize"
        android:paddingStart="@dimen/l_padding"
        android:paddingEnd="@dimen/l_padding"
        app:layout_constraintTop_toBottomOf="@+id/tab_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <FrameLayout
        android:id="@+id/layout_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_search" />


</androidx.constraintlayout.widget.ConstraintLayout>