<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.UpdateUserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.antique.events.ui.utils.components.UBEditText
                android:id="@+id/reg_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/registration_firstname"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/reg_last_mid_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/reg_firstname"
                app:layout_constraintStart_toStartOf="@+id/reg_firstname"
                app:layout_constraintTop_toBottomOf="@+id/reg_firstname">

                <com.antique.events.ui.utils.components.UBEditText
                    android:id="@+id/reg_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="0.1"
                    android:hint="@string/registration_lastname"
                    android:textColorHint="@color/colorHint" />

                <com.antique.events.ui.utils.components.UBEditText
                    android:id="@+id/reg_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="0.1"
                    android:hint="@string/registration_middlename"
                    android:textColorHint="@color/colorHint" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.antique.events.ui.utils.components.UBEditText
                android:id="@+id/reg_birthdate"
                style="?ubEditTextDateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/registration_birthdate"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_last_mid_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_birthdate">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Gender:"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/reg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@drawable/cla_curve_border"
                    android:minHeight="@dimen/edit_text_height"
                    android:paddingStart="@dimen/m_padding"
                    android:paddingEnd="@dimen/m_padding"
                    app:layout_constraintTop_toBottomOf="@+id/gender_header" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/s_padding"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
                    app:layout_constraintBottom_toBottomOf="@+id/reg_gender"
                    app:layout_constraintEnd_toEndOf="@id/reg_gender"
                    app:layout_constraintTop_toTopOf="@+id/reg_gender" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.antique.events.ui.utils.components.UBEditText
                android:id="@+id/reg_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/registration_contact_number"
                android:inputType="number"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_gender" />

            <com.antique.events.ui.utils.components.UBEditText
                android:id="@+id/reg_present_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/registration_present_address"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_contact_number" />

            <com.antique.events.ui.utils.components.UBButton
                android:id="@+id/update_button"
                style="@style/Base.UBButton.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="Update profile"
                app:layout_constraintTop_toBottomOf="@+id/reg_present_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>