<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_hero_bg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/clinica_hero_bg"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="@+id/home_hero_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m_padding"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_welcome_note"
                android:textStyle="bold"
                android:textSize="@dimen/text_title"
                android:layout_marginStart="@dimen/margin_small"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_sub_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_subheader"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/home_card"
        app:layout_constraintStart_toStartOf="@id/home_card"
        android:text="@string/gen_today"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_small"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/m_padding"
        android:paddingEnd="@dimen/m_padding"
        android:clipToPadding="false"
        android:layout_marginBottom="?actionBarSize"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <FrameLayout
        android:id="@+id/layout_empty_today"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="?actionBarSize"
        android:paddingStart="@dimen/l_padding"
        android:paddingEnd="@dimen/l_padding"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>